adaptive spiral, correct gap hero

--- a/src/assets/scss/layout/sections/_hero.scss
+++ b/src/assets/scss/layout/sections/_hero.scss
@@ -15,6 +15,7 @@
 
 		@include breakpoint(lg) {
 			@include flex-center-column;
+			gap: 40px;
 		}
 	}
 
