--- a/src/assets/scss/sass-utils/_global.scss
+++ b/src/assets/scss/sass-utils/_global.scss
@@ -100,15 +100,25 @@ body {
 }
 .spiral {
 	animation: rotate 10s linear infinite;
+	width: 896px;
+	height: 896px;
+	@include breakpoint(lg) {
+		width: 500px;
+		height: 500px;
+	}
 	&_position {
 		position: absolute;
 		left: -539px;
 		top: -194px;
+		@include breakpoint(lg) {
+			left: -330px;
+			top: -120px;
+		}
 	}
 
 	&__circle {
-		width: 896px;
-		height: 896px;
+		width: 100%;
+		height: 100%;
 		border-radius: 50%;
 		border: 1px solid #bcbded;
 	}
@@ -123,9 +133,18 @@ body {
 			height: 32px;
 			background-position: center center;
 			background-repeat: no-repeat;
+			@include breakpoint(lg) {
+				width: 25px;
+				height: 25px;
+				background-size: 25px 25px;
+			}
 		}
 		width: 60px;
 		height: 60px;
+		@include breakpoint(lg) {
+			width: 40px;
+			height: 40px;
+		}
 		border-radius: 50%;
 		background-color: #fff;
 		box-shadow: 0px 0px 25px 0px rgba(151, 151, 151, 0.25);
@@ -134,6 +153,9 @@ body {
 	&__truck {
 		top: 223px;
 		right: 22px;
+		@include breakpoint(lg) {
+			right: -18px;
+		}
 		animation: rotateReverse 10s linear infinite;
 
 		&::before {
@@ -144,6 +166,9 @@ body {
 	&__airplane {
 		bottom: -18px;
 		right: 374px;
+		@include breakpoint(lg) {
+			right: 260px;
+		}
 		animation: rotateReverse 10s linear infinite;
 
 		&::before {
